// Generated file
import "ccsds_mal/types.proto";
import "ccsds_cs/User.proto";


package ackRequest.protobuf;

message Ack {
extensions 3 to 103;

  optional ccsds_mal.protobuf.TIME ackDate = 1;
  optional ccsds_mal.protobuf.BLOB acknowledger = 2;
}
